Applying a Bevel modifer on a object with UVs pins the uv islands #109471

Closed
opened 2023-06-28 21:09:19 +02:00 by Daniel Gryningstjerna · 4 comments

System Information
Operating system: Windows-10-10.0.16299-SP0 64 Bits
Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11

Blender Version
Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: c7fc78b81ecb
Worked: (3.5)

Caused by 0fe0db63d7

Short description of error
Applying a Bevel modifer on a object with UVs pins the uv islands

Other people have reported to have the issue as well:
https://twitter.com/troyosh/status/1673817150937772033

Exact steps for others to reproduce the error

  • Add a object with a uv map,
  • add a bevel modfier
  • apply the bevel modifer
  • go into edit mode
  • the uv islands are randomly pinned and can not be unwraped correctly withoute unpining it.

Video of the issue and .blend file:

**System Information** Operating system: Windows-10-10.0.16299-SP0 64 Bits Graphics card: NVIDIA GeForce 940MX/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 471.11 **Blender Version** Broken: version: 3.6.0, branch: blender-v3.6-release, commit date: 2023-06-27 08:08, hash: `c7fc78b81ecb` Worked: (3.5) Caused by 0fe0db63d7f8d65185e3c296fdf3973f199f216d **Short description of error** Applying a Bevel modifer on a object with UVs pins the uv islands Other people have reported to have the issue as well: https://twitter.com/troyosh/status/1673817150937772033 **Exact steps for others to reproduce the error** - Add a object with a uv map, - add a bevel modfier - apply the bevel modifer - go into edit mode - the uv islands are randomly pinned and can not be unwraped correctly withoute unpining it. Video of the issue and .blend file:
Daniel Gryningstjerna added the
Type
Report
Status
Needs Triage
Priority
Normal
labels 2023-06-28 21:09:20 +02:00
Daniel Gryningstjerna changed title from Applying Bevel modifer on a object with UVs pins the uv islands to Applying a Bevel modifer on a object with UVs pins the uv islands 2023-06-28 21:14:01 +02:00
Member

Can confirm. Probably related to vertex attribute changes.

Not exactly the same but related: #104203

Can confirm. Probably related to vertex attribute changes. Not exactly the same but related: #104203
YimingWu added
Module
Modeling
Status
Confirmed
and removed
Status
Needs Triage
labels 2023-06-29 04:07:08 +02:00
Member

Can we please label this with High Priority if it is a recent regression?

bisecting...

Can we please label this with High Priority if it is a recent regression? bisecting...
Philipp Oeser added
Interest
UV Editing
Priority
High
and removed
Priority
Normal
labels 2023-07-03 14:52:04 +02:00
Member

Caused by 0fe0db63d7

CC @HooglyBoogly

Caused by 0fe0db63d7f8d65185e3c296fdf3973f199f216d CC @HooglyBoogly
Hans Goudey added
Type
Bug
and removed
Type
Report
labels 2023-07-03 15:37:56 +02:00
Hans Goudey self-assigned this 2023-07-03 15:38:02 +02:00

Sound like something I could look into.

My money would be that it would have something to do with the MloopUV -> attributes conversion

Sound like something I could look into. My money would be that it would have something to do with the MloopUV -> attributes conversion
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2023-07-05 18:39:03 +02:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#109471
No description provided.